Finished website for assignment 5

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -8,15 +8,12 @@
   <div class="timeline__point">
   </div>
 
-  <div class="section section--dt" id="team">
+  <div class="section section--t" id="team">
     <div class="container-fluid container-fluid--lg intro">
-
-      <span class="handwritten">our journey</span>
       <h1>
         we are <br>
         about tomorrow
       </h1>
-
     </div>
   </div>
   <div class="section section--nt section--nb">
@@ -68,7 +65,7 @@
     </div>
   </div>
 
-  <div class="section section--dt section--db section--rounded">
+  <div class="section section--t section--b section--rounded">
     <div class="rounded">
       <div class="container-fluid container-fluid--lg intro">
 
@@ -94,7 +91,11 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, hic dignissimos veritatis rerum natus voluptas vel maxime ullam quia voluptatibus.
               </p> --}}
 
-              <p class="btn">deep dive</p>
+              <p class="btn locked">
+                {{> lock
+                }}
+                unlocked 23.07.2021
+              </p>
             </div>
           </div>
         </div>
@@ -117,7 +118,11 @@
               {{!-- <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, hic dignissimos veritatis rerum natus voluptas vel maxime ullam quia voluptatibus.
               </p> --}}
-              <p class="btn">deep dive</p>
+              <p class="btn locked">
+                {{> lock
+                }}
+                unlocked 23.07.2021
+              </p>
             </div>
           </div>
         </div>
@@ -137,7 +142,11 @@
               <div class="card__bg"></div>
               <p class="meta">Assignment 3</p>
               <h2>Wireframing</h2>
-              <a class="btn" href="#">deep dive</a>
+              <p class="btn locked">
+                {{> lock
+                }}
+                unlocked 23.07.2021
+              </p>
             </div>
           </div>
         </div>
@@ -157,7 +166,11 @@
               <div class="card__bg"></div>
               <p class="meta">Assignment 4</p>
               <h2>Visual Design</h2>
-              <p class="btn btn-2">deep dive</p>
+              <p class="btn locked btn-2">
+                {{> lock
+                }}
+                unlocked 23.07.2021
+              </p>
             </div>
           </div>
         </div>
@@ -177,7 +190,10 @@
               <div class="card__bg"></div>
               <p class="meta">Assignment 5</p>
               <h2>High-Fidelity Prototype</h2>
-              <p class="btn btn-2">deep dive</p>
+              <p class="btn btn-2">
+                {{> eye }}
+                deep dive
+              </p>
             </div>
           </div>
         </div>
@@ -197,7 +213,11 @@
               <div class="card__bg"></div>
               <p class="meta">Assignment 6</p>
               <h2>Design reflections</h2>
-              <p class="btn btn-2">deep dive</p>
+              <p class="btn locked btn-2">
+                {{> lock
+                }}
+                unlocked 23.07.2021
+              </p>
             </div>
           </div>
         </div>
