--- a/src/partials/desc-5.hbs
+++ b/src/partials/desc-5.hbs
@@ -15,12 +15,25 @@
       </div>
 
       <div class="row">
+        <div class="col-md-8 offset-md-4">
+          <div class="btn-container">
+            {{!-- {{> download }} --}}
+            <a href="https://about-tomorrow.de/high-fidelity-prototype" target="_blank" rel="noopener" class="btn btn--launch">
+              {{> click }}
+              <span>
+                launch prototype
+              </span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
         <div class="col-md-4 offset-md-4">
           <p>
-            In this assignment it was all about defining our idea and finding a way to work on it as a team.
-            We initially struggled with combing the expertise from all of us, because we had different background and competences.
-            Everyone had another approach and vision for the project. Especially designwise. <br><br>
-            The first step for us was to figure out the main issues that we wanted to tackle.
+            Et violá! This is our production ready, high fidelity Prototype.
+            Our goal was it to create a simple, organized and environmental friendly website builder for all of our users.
+            It's designed to quickly create easy, advanced and most importantly climate friendly websites.
           </p>
         </div>
       </div>
@@ -30,54 +43,29 @@
           <div class="description__info">
             <div class="description__info__inner">
               <h3>
-                Core issues we saw <br> and wanted to tackle
+                Component based <br> emission tracker
               </h3>
             </div>
           </div>
         </div>
         <div class="col-md-8">
-          <div class="threeSlide swiperSlide">
+          <div class="twoSlide">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <div class="description__card">
-                  <p class="description__card__meta">
-                    Pollution
-                  </p>
-                  <img src="images/assignment1/world.png">
-                  <p>
-                    If the internet was a country it would be
-                    the sixth greatest polluter globally.
-                  </p>
-                </div>
+                <img src="/images/assignment5/component_1.png" alt="Component of emission tracker that shows what is using data">
               </div>
               <div class="swiper-slide">
-                <div class="description__card">
-                  <p class="description__card__meta">
-                    Consumption
-                  </p>
-                  <img src="images/assignment1/smoke.png">
-                  <p>
-                    The average web page today produces 1.76 grams CO2 per page
-                  view. For a website with 10,000 monthly page views, that’s 211 kg CO2
-                  per year.
-                  </p>
-                </div>
+                <img src="/images/assignment5/component_2.png" alt="Component of emission tracker that compares the website to websites of top competitors">
               </div>
               <div class="swiper-slide">
-                <div class="description__card">
-                  <p class="description__card__meta">
-                    Solution
-                  </p>
-                  <img src="images/assignment1/bulb.png">
-                  <p>
-                    Coming up with a design standard everybody can use to design and develop a greener,
-                    more climate friendlier digital world
-                  </p>
-                </div>
+                <img src="/images/assignment5/component_3.png" alt="Component of emission tracker that shows what is using data">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/component_4.png" alt="Component of emission tracker that shows what is using data">
               </div>
             </div>
-              {{!-- <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div> --}}
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
               {{!-- <div class="swiper-scrollbar"></div> --}}
           </div>
         </div>
@@ -86,10 +74,8 @@
       <div class="row">
         <div class="col-md-4 offset-md-4">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis illum iure consequatur
-            officiis sint quidem vero tenetur alias deleniti ipsum aut praesentium ullam saepe
-            necessitatibus recusandae quaerat numquam, minus minima quod repudiandae molestias
-            aliquid! Necessitatibus quos laboriosam pariatur iure ad.
+            The key component is our Emission Tracker, which shows the footprint, used data and a live comparison between other webpages. You can have a look at the different components below.
+            We care about tomorrow, so help us to improve the world!
           </p>
         </div>
       </div>
@@ -99,7 +85,8 @@
           <div class="description__info">
             <div class="description__info__inner">
               <h3>
-                Final presentation <br> for assignment 1
+                Sneak <br>
+                Peak
               </h3>
             </div>
           </div>
@@ -108,47 +95,20 @@
           <div class="oneSlide">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_1.jpg">
+                <img src="/images/assignment5/website_2.png">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_2.jpg">
+                <img src="/images/assignment5/website_1.png">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_3.jpg">
+                <img src="/images/assignment5/editor_1.png">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_4.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_5.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_6.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_7.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_8.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_9.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_10.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_11.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_12.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_13.jpg">
+                <img src="/images/assignment5/editor_2.png">
               </div>
             </div>
-              {{!-- <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div> --}}
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
               {{!-- <div class="swiper-scrollbar"></div> --}}
           </div>
         </div>
