--- a/src/scss/_description.scss
+++ b/src/scss/_description.scss
@@ -52,7 +52,7 @@
     background-color: $color-brand-primary;
     border-radius: 50%;
     z-index: 100;
-    box-shadow: 0px 5px 45px 0px rgba($color-gray-darker, 0.8);
+    box-shadow: $btn-shadow-hover;
 
     @media (min-width: $screen-md) {
       bottom: auto;
@@ -107,6 +107,10 @@
     flex-direction: column;
     align-items: center;
 
+    // &--dark {
+    //   background-color: $color-gray-darker;
+    // }
+
     @media (min-width: $screen-md) {
       padding: $space-24 $space-24 $space-48;
     }
@@ -114,6 +118,10 @@
     img {
       width: 75%!important;
       margin: $space-24 0;
+    }
+
+    svg {
+      width: 100%;
     }
 
     &__meta{
@@ -142,28 +150,33 @@
         letter-spacing: 0.05em;
         // padding-left: 4rem;
         margin-bottom: $space-24;
+        padding: $space-12 0 $space-12 $space-24;
 
         @media (min-width: $screen-md) {
           transform: rotate(-90deg);
+          padding: 0;
         }
 
         &:after {
           content: '';
-          width: 3rem;
-          height: 2px;
-          top: 50%;
+          position: absolute;
+          width: 2px;
+          height: 100%;
+          top: 0;
           left: 0;
           background-color: $color-brand-primary;
 
 
-            @media (min-width: $screen-md) {
-              position: absolute;
-              width: calc(4rem * 2);
-              top: calc(4rem * -1.5);
-              left: -2.5rem;
-              transform: rotate(
-                90deg);
-            }
+          @media (min-width: $screen-md) {
+            position: absolute;
+            width: calc(4rem * 2);
+            top: calc(4rem * -1.5);
+            left: -2.5rem;
+            transform: rotate(
+              90deg);
+            width: 8rem;
+            height: 2px;
+          }
         }
       }
     }
@@ -189,6 +202,10 @@
   // @media (min-width: $screen-md) {
   //   padding-right: calc((100vw - 1200px) / 2);
   // }
+
+  h2 {
+    margin-bottom: 0;
+  }
 }
 
 .oneSlide {
