--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -27,6 +27,12 @@
     }
   }
 
+  &__col {
+    &:not(:last-child){
+      margin-bottom: $space-30;
+    }
+  }
+
   .col-md-3 {
     margin-bottom: 40px;
   }
@@ -38,7 +44,7 @@
   }
 
   &__row {
-    &:first-child {
+    &:not(:last-child) {
       margin-bottom: $space-60;
     }
 
