--- a/src/scss/_logo.scss
+++ b/src/scss/_logo.scss
@@ -5,11 +5,17 @@ $size-md: 70px;
   position: relative;
   display: block;
   // overflow: hidden;
-  width: $size;
   transition: all ease-in-out 0.3s;
+  margin-right: $space-6;
 
-  @media (min-width: $screen-md) {
-    width: $size-md;
+  svg {
+    width: $space-12;
+    margin-top: $space-3;
+  }
+
+  &__container {
+    display: flex;
+    align-items: center;
   }
 
   & > div {
