--- a/src/scss/_typo.scss
+++ b/src/scss/_typo.scss
@@ -91,8 +91,9 @@ span.brand {
 
 .handwritten {
   font-family: 'formosa', sans-serif;
-  color: $color-brand-primary;
+  color: $color-brand-secondary;
   font-size: $font-size-xxl;
+  // transform: rotate(25deg);
 
   span {
     letter-spacing: -0.2em;
