--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,7 +15,14 @@ $color-gray-dark: #131515;
 $color-gray-darker: #202124;
 $color-gray-darkest: #1A1A1C;
 
+$color-shadow: $color-gray-darkest;
+
 $color-gray-trans-50: rgba(130, 130, 130, .5);
+
+// shadows
+
+$btn-shadow: 0px 15px 75px 0px rgba($color-shadow, 0.12);
+$btn-shadow-hover: 0px 30px 150px 0px rgba($color-shadow, 0.24);
 
 // font size
 $font-size-xxxxl: calc(100px + 2vw);
